@@ -1,1 +1,16 @@
 # MarketCodeReader
+
+# Como executar o projeto
+
+```bash
+# 1º) Instalar o java jdk 17.0.1 que está na pasta utils
+command install
+
+# 2º) Abrir o terminal e executar o java compiler da seguinte forma:
+javac --module-path "Path to your javafx lib folder" --add-modules javafx.controls,javafx.fxml Application.java
+
+# 3º) Executar a aplicação
+java --module-path "Path to your javafx lib folder" --add-modules javafx.controls,javafx.fxml Application
+
+# 4ª) Isso tudo irá gerar um arquivo exe dentro da pasta do programa, basta executá-lo.
+```
